pom.xml modified

--- a/Proyecto_Final/pom.xml
+++ b/Proyecto_Final/pom.xml
@@ -126,10 +126,17 @@
                                     <type>jar</type>
                                 </artifactItem>
                                 
-                                  <artifactItem>
+                                <artifactItem>
                                     <groupId>com.github.jsimone</groupId>
                                     <artifactId>webapp-runner</artifactId>
                                     <version>9.0.27.1</version>                        
+                                    <destFileName>webapp-runner.jar</destFileName>
+                                </artifactItem>
+                                
+                                <artifactItem>
+                                    <groupId>com.heroku</groupId>
+                                    <artifactId>webapp-runner</artifactId>
+                                    <version>9.0.41.0</version>
                                     <destFileName>webapp-runner.jar</destFileName>
                                 </artifactItem>
                             </artifactItems>
